--- a/index.css
+++ b/index.css
@@ -153,3 +153,8 @@
                     header {
                         text-align: center;
                     }
+                    
+                    button {
+                        border-radius: 7px;
+                        text-decoration: none;
+                    }
