--- a/index.css
+++ b/index.css
@@ -158,3 +158,7 @@
                         border-radius: 7px;
                         text-decoration: none;
                     }
+                    
+                    #menu {
+                        padding-left: 50px;
+                    }
